projeto-salesforce/force-app/main/default/objects/Chamado_Tecnico__c/Chamado_Tecnico__c.object-meta.xml
<CustomObject>
    <label>Chamado Tecnico</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Numero do Chamado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chamados Tecnicos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>