projeto-salesforce/force-app/main/default/objects/Chamado_Tecnico__c/fields/Data_de_Abertura__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Abertura__c</fullName>
    <label>Data de Abertura</label>
    <type>DateTime</type>
</CustomField>