projeto-salesforce/force-app/main/default/objects/Chamado_Tecnico__c/fields/Descricao_do_Problema__c.field-meta.xml
<CustomField>
    <fullName>Descricao_do_Problema__c</fullName>
    <label>Descricao do Problema</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>