projeto-salesforce/force-app/main/default/objects/Chamado_Tecnico__c/fields/Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Equipamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipamento</label>
    <referenceTo>Equipamento__c</referenceTo>
    <relationshipLabel>Chamados Tecnicos</relationshipLabel>
    <relationshipName>Chamados_Tecnicos</relationshipName>
    <type>Lookup</type>
</CustomField>