projeto-salesforce/force-app/main/default/objects/Chamado_Tecnico__c/fields/SLA_Vencimento__c.field-meta.xml
<CustomField>
    <fullName>SLA_Vencimento__c</fullName>
    <label>SLA Vencimento</label>
    <type>DateTime</type>
</CustomField>